# ai-project-naman

./: .gitignore  AGENTS.md  Dockerfile  README.md  SOLUTIONS.md  chatbot-manual-tests.md  client-server.md  docker-compose.yml  local-document-spec.md  spec-agent-1.md  spec-agent-2.md  spec-agent-3.md  spec-agent-4.md  spec-agent-5.md  spec-agent-6.md  spec-agent-7.md
client/: .pre-commit-config.yaml  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
ops-agent/: .env.example  AGENTS.md  README.md  pyproject.toml  run_agent.py
ops-agent/adk_app/: __init__.py  agent.py
ops-agent/adk_app/opscopilot/: __init__.py
ops-agent/app/: investigation_entry.py  investigation_flow.py  service.py
ops-agent/app/agents/: __init__.py  context_builder_agent.py  incident_analysis_agent.py  orchestrator_agent.py  response_composer_agent.py  runtime.py
ops-agent/app/tools/: __init__.py  agent_tools.py  docs_search.py
ops-agent/evals/golden/: evalTest.evalset.json
ops-agent/resources/: index.json
ops-agent/resources/architecture/: service-dependencies.md  system-overview.md
ops-agent/resources/architecture docs/: index.json  service-dependencies.md  system-overview.md
ops-agent/resources/policies/: incident-response-policy.md  index.json
ops-agent/resources/postmortems/: incident-payment-latency.md  incident-search-outage.md  index.json
ops-agent/resources/runbooks/: api-gateway-runbook.md  auth-service-runbook.md  index.json  payment-service-runbook.md  search-service-runbook.md
server/: .env.example  AGENTS.md  (+4 more)
(+60 files in other folders)
